fix: vercel dark mode not working bug

--- a/css/globals.css
+++ b/css/globals.css
@@ -107,8 +107,8 @@ nav img {
 
 #toggle-theme-button{
     padding: 0 .5rem;
-    background: rebeccapurple;
 }
+
 .menu .action .fa-bars{
     display: none;
 }
